--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,9 +17,20 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "sass/style.scss",
+      "imports": [
+        "sass/_variables.scss",
+        "sass/_mixins.scss",
+        "sass/_general.scss",
+        "sass/_fonts.scss",
+        "sass/_navigation.scss"
+      ]
+    }
+  ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
