--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,7 +25,8 @@
         "sass/_mixins.scss",
         "sass/_general.scss",
         "sass/_fonts.scss",
-        "sass/_navigation.scss"
+        "sass/_navigation.scss",
+        "sass/_inspire.scss"
       ]
     }
   ],
