--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,8 @@
         "sass/_general.scss",
         "sass/_fonts.scss",
         "sass/_navigation.scss",
-        "sass/_inspire.scss"
+        "sass/_inspire.scss",
+        "sass/_welcome.scss"
       ]
     }
   ],
