--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,7 +27,8 @@
         "sass/_fonts.scss",
         "sass/_navigation.scss",
         "sass/_inspire.scss",
-        "sass/_welcome.scss"
+        "sass/_welcome.scss",
+        "sass/_ourService.scss"
       ]
     }
   ],
