--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,12 +23,18 @@
       "imports": [
         "sass/_variables.scss",
         "sass/_mixins.scss",
+        "sass/plugins/_slick-theme.scss",
+        "sass/plugins/_slick.scss",
         "sass/_general.scss",
         "sass/_fonts.scss",
         "sass/_navigation.scss",
-        "sass/_inspire.scss",
-        "sass/_welcome.scss",
-        "sass/_ourService.scss"
+        "sass/components/_buttons.scss",
+        "sass/components/_sections.scss",
+        "sass/components/_slider.scss",
+        "sass/components/section/_inspire.scss",
+        "sass/components/section/_welcome.scss",
+        "sass/components/section/_ourService.scss",
+        "sass/components/section/_clients.scss"
       ]
     }
   ],
