--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,7 +34,8 @@
         "sass/components/section/_inspire.scss",
         "sass/components/section/_welcome.scss",
         "sass/components/section/_ourService.scss",
-        "sass/components/section/_clients.scss"
+        "sass/components/section/_clients.scss",
+        "sass/components/section/_testimonials.scss"
       ]
     }
   ],
