--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,7 +36,8 @@
         "sass/components/section/_ourService.scss",
         "sass/components/section/_clients.scss",
         "sass/components/section/_testimonials.scss",
-        "sass/components/section/_get.scss"
+        "sass/components/section/_get.scss",
+        "sass/components/section/_footer.scss"
       ]
     }
   ],
