--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,8 +21,8 @@
     {
       "path": "sass/style.scss",
       "imports": [
+        "sass/_mixin.scss",
         "sass/_variables.scss",
-        "sass/_mixins.scss",
         "sass/plugins/_slick-theme.scss",
         "sass/plugins/_slick.scss",
         "sass/_general.scss",
@@ -37,7 +37,8 @@
         "sass/components/section/_clients.scss",
         "sass/components/section/_testimonials.scss",
         "sass/components/section/_get.scss",
-        "sass/components/section/_footer.scss"
+        "sass/components/section/_footer.scss",
+        "sass/components/section/_aboutUs.scss"
       ]
     }
   ],
